2017-05-11  Philipp Kerling  <pkerling@casix.org>

	[ftinspect] Insert explicit casts where warranted.

	This avoids compiler warnings.

	* src/ftinspect.cpp (Engine::numberOfNamedInstances,
	Engine::glyphName, Engine::loadOutline, GlyphBitmap::GlyphBitmap,
	GlyphBitmap::paint, QGraphicsViewx::resizeEvent): Do it.

2017-05-11  Philipp Kerling  <pkerling@casix.org>

	[ftinspect] Replace old-style casts with C++ casts.

	* src/ftinspect.cpp (Engine::update, GlyphPointNumbers::paint): Do
	it.

2017-05-11  Philipp Kerling  <pkerling@casix.org>

	[ftinspect] Make color tables and settings more readable.

	* src/ftinspect.cpp (MainGUI::setGraphicsDefaults): Use Qt
	constants and `qRgba'.

2017-05-11  Philipp Kerling  <pkerling@casix.org>

	[ftinspect] Use symbolic constant for TrueType interpreter v40.

	v40 is implemented meanwhile.

	* src/ftinspect.cpp (Engine::Engine, MainGUI::setDefaults): Use
	`TT_INTERPRETER_VERSION_40'.

2017-05-11  Philipp Kerling  <pkerling@casix.org>

	[ftinspect] Remove unneeded explicit array sizes.

	* src/ftinspect.cpp (Engine::Engine): Do it.

2017-05-11  Philipp Kerling  <pkerling@casix.org>

	[ftinspect] Make `ftcFaceID' conversion safe.

	* src/ftinspect.cpp: Include `stdint.h'.
	(faceRequester): Implement it.

2017-05-11  Philipp Kerling  <pkerling@casix.org>

	[ftinspect] Synchronize dpi, target, pxlMode types with FreeType.

	* src/ftinspect.h (Engine): Make `dpi' unsigned int.
	Make `loadFlags' unsigned long.
	(GlyphBitmap): Use `FT_Pixel_Mode' for `pixelMode' and constructor.

	* src/ftinspect.c: Include `cstdint', `cmath', `limits',
	`stdexcept', needed by forthcoming commits.
	(Engine::update, GlyphBitmap::GlyphBitmap, MainGUI::drawGlyph):
	Updated.

2017-05-11  Philipp Kerling  <pkerling@casix.org>

	[ftinspect] Change freetype2 include path to system include path.

	This avoids warnings.

	* src/ftinspect.pro: Do it.

2017-05-11  Philipp Kerling  <pkerling@casix.org>

	[ftinspect] Remove `const_cast'.
